force-app/main/default/objects/MIY_LeadTime__c/MIY_LeadTime__c.object-meta.xml
<CustomObject>
    <label>NY LeadTime</label>
    <nameField>
        <label>NY LeadTime Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NY LeadTimes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>