force-app/main/default/objects/MIY_LeadTime__c/fields/Exotic_Distribution_Lead_Time_in_days__c.field-meta.xml
<CustomField>
    <fullName>Exotic_Distribution_Lead_Time_in_days__c</fullName>
    <label>Exotic Distribution Lead Time (in days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>