force-app/main/default/objects/MIY_LeadTime__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name Validation</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>