force-app/main/default/objects/MIY_LeadTime__c/fields/Non_Exotic_Distribution_LT_in_days__c.field-meta.xml
<CustomField>
    <fullName>Non_Exotic_Distribution_LT_in_days__c</fullName>
    <label>Non-Exotic Distribution LT (in days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>