force-app/main/default/objects/MIY_LeadTime__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Exotic_Distribution_Lead_Time_in_days__c</columns>
    <columns>Non_Exotic_Distribution_LT_in_days__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>